--- a/Discussion.tex
+++ b/Discussion.tex
@@ -5,7 +5,7 @@ This project is dealing with a topic that is of big importance to the industry t
 \section{Text Normalization and Scores}
 As talked about in the beginning of this thesis, the issue of text normalization showed to have an impact. During the thesis we have seen several examples of the issues of not being able to do a full normalization of the article text before applying the algorithms. So far, no apparent issues have been found that includes special characters, but there have been a lot of formatting issues. We saw in figure ~\ref{JPPOLSencondHighestLCS} the problem with white spaces. This might not have been a deciding factor in most cases as to what match group have been applied to a comparison, but we cannot be sure.
 
-Applying the match groups was based off several things, amongst that the LCS scores. This score is sensitive to formatting errors, and to eliminate this factor we would have to normalize the text.
+Applying the match groups was based on several things, amongst that the LCS scores. This score is sensitive to formatting errors, and to eliminate this factor we would have to normalize the text.
 
 \section{LCS Threshold}
 In this thesis, we have been working with an LCS threshold of four. We saw at least one example of where this threshold had a great impact (see figure ~\ref{LengthIssue}). Another factor worth taking into account when looking at the LCS threshold would be to remove white spaces from the LCS. Also removing stop words would impact this.
@@ -18,7 +18,7 @@ Especially the enum "SameContent" can prove to be a bit of a hassle. Imagine two
 The limiting factors that is time, and this thesis being done by one person, sets a limit as to how many comparisons can be proof read. There will undoubtedly be false positives in the result sets, that is the way of things with a prototype. It would require a lot more work to fully confirm if this solution is to be 100\% right all the time.
 
 \section{Test Size}
-Another issue brought onto this thesis by the limitations of time and personnel available, is the issue of how much material in the test corpus could be used. Of the 557 sources available in the test corpus, only four have been tested. Although the findings of testing these four sources was conclusive in the sense that there was no comparisons that produced a result that could not be explained or that seemed too out of the ordinary, a test on a bigger part of the test corpus are really needed. This is also true for the way the score evaluation was made. The methods evaluating scores was based of the findings of comparing the four sources. And testing this on all 557 sources, would maybe alter the thresholds for weighing scores.
+Another issue brought onto this thesis by the limitations of time and personnel available, is the issue of how much material in the test corpus could be used. Of the 557 sources available in the test corpus, only four have been tested. Although the findings when testing these four sources was conclusive, in the sense that there was no comparisons that produced a result that could not be explained or that seemed too out of the ordinary, a test on a bigger part of the test corpus are really needed. This is also true for the way the score evaluation was made. The methods evaluating scores was based of the findings of comparing the four sources. And testing this on all 557 sources, would maybe alter the thresholds for weighing scores.
 
 \section{Low Score Comparisons}
 As we saw in figure ~\ref{LengthIssue} there are cases in which low score comparisons would provide interesting information. These might be rare and far in between, but we should still consider whether we should spend time and energy on finding these. One could argue that because these cases seems to be extremely rare (keeping in mind that we only tested few algorithms and sources), we could miss out on potential matches by dismissing these comparisons as no matches.
