--- a/Evaluation.tex
+++ b/Evaluation.tex
@@ -11,12 +11,12 @@ So, a Cosine score of 1.0 means that the two article vectors are identical, same
 
 \section{Limiting the Number of Comparisons by Cosine Score}
 
-As discussed in the last chapter (see section ~\ref{AllFractiles}) there is many comparisons in the lowest fractile of the article comparisons. Although dismissing them right of the bat can be seen as hasty, the chance of comparisons scoring below 0.3 having much in common would be unlikely. This is because comparisons that score very low in the Cosine algorithm either have very little in common in terms of special words (as common words will have very little impact on the vector) or the article is very short and again, with few special words (we will see an example of this later on). However, an article with no special words that is very short, is very rare and few in between. We will however see examples of such articles later on.
+As discussed in the last chapter (see section ~\ref{AllFractiles}) there is many comparisons in the lowest fractile of the article comparisons. Although dismissing them right of the bat can be seen as hasty, the chance of comparisons scoring below 0.3 having much in common would be unlikely. This is because comparisons that score very low in the Cosine algorithm either have very little in common in terms of special words (as common words will have very little impact on the vector) or the article is very short and again, with few special words (we will see an example of this later on). However, an article with no special words that is very short, is very rare and few and far between. We will however see examples of such articles later on.
 
-For the sake of proving anything in this thesis how ever, and as the chance of getting useful results from comparisons with low Cosine scores are slim and the number of comparisons having to be humanly checked are massive in numbers should we check all comparisons, I will for the rest of this thesis, disregard all comparisons with a cosine score lower than 0.3.
+For the sake of proving anything in this thesis however, and as the chance of getting useful results from comparisons with low Cosine scores are slim and the number of comparisons having to be humanly checked are massive in numbers should we check all comparisons. For the rest of this thesis all comparisons with a cosine score lower than 0.3 will be disregarded.
 
 \section{What the Scores Tell}
-First off we need to realize what the different scores is telling us on their own. The cosine score will give an indication of how similar two articles are in regards to the words being used, but will not tell us anything in regards to what the article is actually saying in regards to the structure of sentences (see section ~\ref{CosineProblem}). By it's own, Cosine will tell us more about if the comparisons have the same topic that actually the same sentences. 
+First off we need to realize what the different scores is telling us on their own. The cosine score will give an indication of how similar two articles are in regards to the words being used, but will not tell us anything in regards to what the article is actually saying in regards to the structure of sentences (see section ~\ref{CosineProblem}). By it's own, Cosine will tell us more about if the comparisons have the same topic, than actually the same sentences. 
 
 The modified LCS is an indication of how big a percentage of text in relation to article length that an article have in common with another article. The LCS score will therefore tell us a lot about how much actual text a comparison shares. 
 
@@ -306,7 +306,7 @@ The plot in figure ~\ref{Over100} shows that we have two substrings of substanti
 \section{Weighing the Scores}
 In the previous sections we became aware that we need to do some amount of evaluation of various factors when determining if two articles are duplications to avoid cases where the result would be false positive or false negative. We need to take into account the length in combination with the scores, but also the scores in relation to each other. These factors all help us decide if we are looking at duplicates or not. In this section we will look into these factors and apply them to our comparisons.
 
-In combination, the two sets of scores (Cosine and both of the LCS scores), can draw us a more detailed picture, one that to a higher degree of confidence call tell about any relations between two articles. As we have seen, we can often get a sort of gut feeling about how well the two articles in a comparison is related by looking at their scores.
+In combination, the two sets of scores (Cosine and both of the LCS scores), can draw us a more detailed picture, one that to a higher degree of confidence can tell about any relations between two articles. As we have seen, we can often get a sort of gut feeling about how well the two articles in a comparison is related by looking at their scores.
 
 The table ~\ref{ScoreWeights} was created in order to try and give some weight to the scores. This could then be used in the program for score evaluation. We can then emphasize scores that with a high degree of certainty is a match, and suppress false positives. The weight would be a factor that could be multiplied to the scores the algorithms produced in order to emphasize the result. These score weightings was based of the results gotten from doing article comparisons. There would be times where the scores would indicate a match in situations where there was no basis to talk of a real match (like what we saw in figure ~\ref{LengthIssue}). The table ~\ref{ScoreWeights} was then created in order to try and set up a basis for evaluating the scores. 
 
