--- a/Implementation.tex
+++ b/Implementation.tex
@@ -55,7 +55,7 @@ This works really well for finding substrings that can have been obfuscated in l
 
 When comparing two articles with the LCS, the algorithm finds a lot of substrings, but only keeps the longest by default
 
-The next step was to modify the LCS algorithm to make it suit the needs of this thesis. When looking at article duplicates, it makes more sense to look for entire words rather than single characters. This is because when an article is duplicated, any obfuscation or alteration would be done by cutting out sections of the article or moving sections around or adding new sections. 
+The next step was to modify the LCS algorithm to make it suit the needs of this thesis. When looking at article duplicates, it makes more sense to look for entire words rather than single characters. This is because when an article is duplicated, any obfuscation or alteration would be done by cutting out sections of the article, or moving sections around, or adding new sections. 
 
 One could argue that only checking for whole words rather than individual characters would be better as you could then find parts of words that are matching (if the word is misspelled), however this is unlikely to improve results by much, and as we will see later, there is a good reason to look for words rather than characters.
 
@@ -79,7 +79,7 @@ For testing purposes it is nicer and easier to read text split up into words rat
 So even though it adds no immediate performance boost, this is both a step on the way and helping hand in terms of evaluating the results from LCS.
 
 \section{Collection of Substrings}
-Another modification to the LCS that would help finding article duplicates, would be to make LCS create a collection of substrings. The benefits of this would to some extend help eliminate the error prone ways of LCS. If looking at two articles that would be considered a perfect match (same length and same article text), except for the word in middle of the text in one of the articles. If this have been changed, misspelled or forgotten, this would cause the basic implementation of LCS to return that the length of the longest common substring, which would be just under 50\% of the article's length. How ever, if we create a collection of substring we can in part work around this issue. Then we would find two substrings, one before the middle word (that is missing or in other way not present in the same form as in the other article) and one after the middle word. Our combination of substrings would then return a length that is close to 100\% of the article length (all words minus the missing word).
+Another modification to the LCS that would help finding article duplicates, would be to make LCS create a collection of substrings. The benefits of this would to some extend help eliminate the error prone ways of LCS. If looking at two articles that would be considered a perfect match (same length and same article text), except for the word in middle of the text in one of the articles. If this have been changed, misspelled or forgotten, this would cause the basic implementation of LCS to return that the length of the longest common substring, which would be just under 50\% of the article's length. However, if we create a collection of substring we can in part work around this issue. Then we would find two substrings, one before the middle word (that is missing or in other way not present in the same form as in the other article) and one after the middle word. Our combination of substrings would then return a length that is close to 100\% of the article length (all words minus the missing word).
 
 When doing this modification one should consider using a threshold that indicates the minimum length a substring should have in order to be included. There will inevitably be a lot of short matches (single words, white spaces, two words that are often in same context and so on) when comparing articles with the LCS. So an effective threshold would be one that filters away the noise, but it not so high that important (in terms of finding duplicates) sentences are filtered out. For this thesis the threshold have been set to four, meaning that all substrings consisting of four or more words are being stored as a result.
 
