--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -8,14 +8,14 @@ As there is a lot of terms used in this thesis related to the kind of job Infome
 \begin{itemize}
 \item \textbf{Article:} For this thesis, a digital document containing the contents of a piece of news. Could originate from papers, magazines, TV or other forms of media. In this thesis a document corresponds to an article. Articles are in their electronic form stored at Infomedia as XML files, throughout this thesis we will only deal with the part of the XML files that contains data of value to this assignment. This being \textit{Tags} (see below), \textit{Headline}, \textit{Sub headline} and \textit{Article Text}. The XML file contains other data that will not be used for this thesis.
 \item \textbf{Corpus:} From Latin meaning \textit{body}. In this thesis that describes the test set of articles being used a test set throughout the thesis.
-\item \textbf{Monitoring:} In relation to the news monitoring (news surveillance) that Infomedia does, is the act of collecting news that holds information of value to our customers.
+\item \textbf{Monitoring:} In relation to the news monitoring (news surveillance) that Infomedia do, is the act of collecting news that holds information of value to our customers.
 \item \textbf{Tag:} Used in Ontology\footnote{\url{http://en.wikipedia.org/wiki/Ontology_(information_science)}} to create words that describes the contents of an article.
-\item \textbf{Term:} Basically a word or collection of words that describes an object (person, place, topic etcetera). A term will be something that can be searched for. A term can also be a collection of words
-\item \textbf{Stop word:} A stop word is a word that offers little in textual context\footnote{\url{http://en.wikipedia.org/wiki/Stop_words}}. Stop words are common words (such as 'og', 'jeg', 'de', 'vores' and the like). For the most part these stop words have little meaning, and removing them from a text would normally cause no problem, however as the Wikipedia link also suggests the group "The Who" would removed from a text if you were to remove common English words. It would be possible to implement a list of stop word combinations that would not be removed such as "The Who", "Take That" and such.
+\item \textbf{Term:} Basically a word, or collections of words, that describes an object (person, place, topic etcetera). A term will be something that can be searched for.
+\item \textbf{Stop word:} A stop word is a word that offers little in textual context\footnote{\url{http://en.wikipedia.org/wiki/Stop_words}}. Stop words are common words (such as 'og', 'jeg', 'de', 'vores' and the like). For the most part these stop words have little meaning, and removing them from a text would normally cause no problem, however as the Wikipedia link also suggests the band name "The Who" would be removed from a text if you were to remove common English words. It would be possible to implement a list of stop word combinations that would not be removed such as "The Who", "Take That" (bands) and such.
 \end{itemize}
 
 \section{Matching}
-In this thesis we will talk about false and true positives and negatives. A 'match' will mean that two articles to some extend have the same content (or at least believed to have the same content).
+In this thesis we will talk about false or true positives and negatives. A 'match' will mean that two articles to some extend have the same content (or at least believed to have the same content).
 
 \begin{itemize}
 \item \textbf{False Positive:} When an algorithm wrongfully identifies two articles as a match.
@@ -30,7 +30,7 @@ In this thesis the terms 'duplicates' or 'match' are often used about article co
 
 \subsection{Topic Matching}
 When looking at article matching, there is also the possibility of having articles score pretty well in the algorithms because they are dealing with the same topic, but have not been duplicated. There are cases where the article have been heavily modified, and then there would be no basis to talk about duplication. Then one could talk about topic matching. The obfuscation could be done by purpose, to try and hide the fact that the article is a duplicate of another article. The article no longer contains the same phrases, but deals with the same topic.
-Of course two articles could describe the same topic, but never have been related to begin with. I will not try and dissect whether this is the case, only try and indicate when I find two articles that are dealing with the same topic, and mark them as such. 
+Of course two articles could describe the same topic, though they were not related to begin with. I will not try and dissect whether this is the case, only try and indicate when I find two articles that are dealing with the same topic, and mark them as such. 
 
 \subsection{Copyright}
 It is hard to talk about article duplicating without talking about copyrights. Although this thesis will not delve into whether something is duplicated as a part of a copyright infringement or not, it seems only reasonable to give pause for a moment to talk about what a copyright is, and how it would affect duplication.
