--- a/SummaryUK.tex
+++ b/SummaryUK.tex
@@ -4,6 +4,6 @@ The goal of this thesis is to document my work with implementing a working proto
 
 I will look at various algorithms for text comparison, and look into the possibility of creating my own algorithm or tweak an existing algorithm to better suit the needs for this job.
 
-I will do an analysis of the task and what kind of implementation I have done.
+I will do an analysis of the task, and what kind of implementation I have done.
 
-Finally I will write a summary of the work done, problems I have come across and what the future of the project will be.
+Finally I will write a summary of the work done, problems I have come across, and what the future of the project will be.
